deps/v8/test/message/fail/arrow-invalid-rest.out
*%(basename)s:7: SyntaxError: Rest parameter may not have a default initializer
var f = (...x = 10) => x;
            ^
SyntaxError: Rest parameter may not have a default initializer
